YT-27354: Resource Usage: Support using two tickets simultaneously commit_hash:e0662f913b02112af3f94992560e229bc6d746b2
