# yt/microservices/resource_usage/json_api_go/docs/swagger.json
@@ -625,8 +625,8 @@
                 "error": {
                     "type": "string"
                 },
-                "is_service": {
-                    "type": "boolean"
+                "service": {
+                    "type": "string"
                 },
                 "user": {
                     "type": "string"
